grammar.js
    program: ($) =>
      seq(
        repeat(seq($.use, optional(";"))),
        repeat($._declaration),
      ),

    _declaration: ($) =>
      choice(
        $.function_declaration,
        $.enum_definition,
        $.module_declaration,
        $.type_alias_declaration,
        $.trait_definition,
        $.trait_implementation,
        $.effect_definition,
      ),

    //////// MODULES ////////////
    with_clause: ($) =>
      seq("with", one_or_more($._type)),
    constructor: ($) =>
      seq(
        "case",
        $._uppercase_name,
        optional(
          field(
            "parameters",
            $.constructor_parameters,
          ),
        ),
      ),
    function_declaration: ($) =>
      seq(
        $._function_definition,
        "=",
        field("body", $.expressions),
      ),
    _function_definition: ($) =>
      seq(
        optional($.annotations),
        optional($.modifiers),
        "def",
        field("name", $._function_name),
        optional(
          field(
            "type_parameters",
            $.type_parameters,
          ),
        ),
        field("parameters", $.parameters),
        optional(
          seq(
            ":",
            field("return_type", $._type),
          ),
        ),
        optional(
          seq(
            "\\",
            field("effects", $.effects),
          ),
        ),
        optional(
          field(
            "with_clause",
            $.with_clause,
          ),
        ),
        optional(
          field(
            "where_clause",
            $.where_clause,
          ),
        ),
      ),
    parameters: ($) =>
      seq(
        "(",
        zero_or_more($.parameter),
        ")",
      ),
    parameter: ($) =>
      seq(
        field("name", $._lowercase_name),
        ":",
        field("type", $._type),
      ),
    _typeless_parameters: ($) =>
      alias(
        $._typeless_parameters_inner,
        $.parameters,
      ),
    arguments: ($) =>
      seq(
        "(",
        zero_or_more(
          choice($._expression, $.ignored),
        ),
        ")",
      ),

    /////// EFFECTS ///////
    effects: ($) =>
      prec(
        PREC.effects,
        one_or_more($._effect),
      ),
    _effect: ($) =>
      choice(
        alias(
          $.uppercase_name,
          $.identifier,
        ),
        alias(
          $.lowercase_name,
          $.polymorphic_identifier,
        ),
        $.effect_group,
        $.binary_effect,
        $.unary_effect,
        $.effect_field,
      ),
    binary_effect: ($) =>
      prec.left(
        seq(
          $._effect,
          alias(
            choice("+", "-", "&"),
            $.operator,
          ),
          $._effect,
        ),
      ),
    effect_group: ($) =>
      choice(
        seq(
          "{",
          one_or_more($._effect),
          "}",
        ),
        seq("(", $._effect, ")"),
      ),
    effect_block: ($) =>
      seq(
        "run",
        $.block,
        repeat1($.effect_handler),
      ),
    effect_handler: ($) =>
      seq(
        "with",
        choice(
          seq(
            "handler",
            field(
              "effect",
              $._uppercase_name,
            ),
            field("body", $.handler_body),
          ),
          field(
            "effect",
            choice(
              $.field,
              $._lowercase_name,
            ),
          ),
        ),
      ),
    handler_body: ($) =>
      seq(
        "{",
        repeat1(
          alias(
            $._handler_function,
            $.function_declaration,
          ),
        ),
        "}",
      ),
    _handler_function: ($) =>
      seq(
        $._handler_function_definition,
        "=",
        field("body", $.expressions),
      ),
    _stmt: ($) =>
      seq(
        optional(seq($._stmt, ";")),
        $._expression,
      ),
    block: ($) => seq("{", $._stmt, "}"),
    expressions: ($) => prec(1, $._stmt),
    _expression_list: ($) =>
      one_or_more($._expression),
    _expression: ($) =>
      choice(
        $._literal,
        $._variable_name,
        $.block,
        $.if,
        $.match,
        $.for_monadic,
        $.for_applicative,
        $.foreach,
        $.let,
        $.field,
        $.ref,
        $.deref,
        $.assign,
        $.region,
        $.unary,
        $.binary,
        $.group,
        $.call_expression,
        $.object_constructor,
        $.tuple,
        $.effect_block,
        $.lambda,
        $.spawn,
        $.select,
        $.parallel,
        $.constraints,
        $.inject,
        $.query,
        $.solve,
        $.type_ascription,
      ),

    ///////// CONTROL STRUCTURES /////////////
    for_applicative: ($) =>
      seq(
        "forA",
        "(",
        zero_or_more_by(
          choice($.gets, $.filter),
          ";",
        ),
        ")",
        "yield",
        $._expression,
      ),
    for_monadic: ($) =>
      seq(
        "forM",
        "(",
        zero_or_more_by(
          choice($.gets, $.filter),
          ";",
        ),
        ")",
        "yield",
        $._expression,
      ),
    foreach: ($) =>
      seq(
        "foreach",
        "(",
        zero_or_more_by(
          choice(
            $.gets,
            $.filter,
            $.variable_mapping,
          ),
          ";",
        ),
        ")",
        $._foreach_body,
      ),
    _foreach_body: ($) =>
      choice(
        seq("yield", $._expression),
        $._expression,
      ),
    variable_mapping: ($) =>
      seq(
        $._variable_name,
        "=",
        $._expression,
      ),
    gets: ($) =>
      seq(
        choice($.ignored, $._variable_name),
        "<-",
        $._expression,
      ),
    filter: ($) => seq("if", $._expression),
    if: ($) =>
      seq(
        "if",
        "(",
        $._expression,
        ")",
        $._expression,
        "else",
        $._expression,
      ),
    match: ($) =>
      seq(
        "match",
        $._expression,
        choice(
          $._match_block,
          $._match_lambda,
        ),
      ),
    _match_lambda: ($) =>
      seq("->", $._expression),
    _match_block: ($) =>
      seq(
        "{",
        repeat(alias($.match_case, $.case)),
        "}",
      ),
    _pattern: ($) =>
      choice(
        $.ignored,
        $._literal,
        $._variable_name,
        $._uppercase_name,
        alias(
          $.pattern_constructor,
          $.constructor,
        ),
        alias($._pattern_tuple, $.tuple),
      ),
    select: ($) =>
      seq(
        "select",
        "{",
        repeat(
          alias($._select_case, $.case),
        ),
        "}",
      ),
    _select_case: ($) =>
      seq(
        "case",
        field(
          "pattern",
          choice(
            $.gets,
            alias($.ignored, $.default),
          ),
        ),
        "=>",
        field("expressions", $.expressions),
      ),
    parallel: ($) =>
      seq(
        "par",
        "(",
        zero_or_more_by($.gets, ";"),
        ")",
        "yield",
        $._expression,
      ),

    ///////////// 'SIMPLE' EXPRESSIONS ////////////
    tuple: ($) =>
      seq(
        "(",
        one_or_more($._expression),
        ")",
      ),
    field: ($) =>
      prec(
        PREC.field,
        seq(
          choice(
            $._lowercase_name,
            $._uppercase_name,
            $.field,
          ),
          ".",
          choice(
            $._uppercase_name,
            $._lowercase_name,
            $._greek_name,
            $._math_name,
            $._operator_name,
          ),
        ),
      ),
    ref: ($) =>
      seq(
        "ref",
        $._expression,
        "@",
        $._lowercase_name,
      ),
    spawn: ($) =>
      seq(
        "spawn",
        $._expression,
        "@",
        $._lowercase_name,
      ),
    deref: ($) =>
      prec(
        PREC.deref,
        seq("deref", $._expression),
      ),
    assign: ($) =>
      prec.left(
        PREC.assign,
        seq(
          $._expression,
          ":=",
          $._expression,
        ),
      ),
    region: ($) =>
      seq(
        "region",
        field("name", $._lowercase_name),
        field("body", $.block),
      ),
    let: ($) =>
      seq(
        "let",
        $._pattern,
        optional(seq(":", $._type)),
        "=",
        choice(
          $._expression,
          alias(
            $._type_ascription,
            $.type_ascription,
          ),
        ),
      ),
    call_expression: ($) =>
      prec(
        PREC.call,
        seq(
          field(
            "function",
            choice(
              $._function_name,
              $._uppercase_name,
              $._expression,
            ),
          ),
          field("arguments", $.arguments),
        ),
      ),
    object_constructor: ($) =>
      seq(
        "new",
        field(
          "type",
          choice(
            $._lowercase_name,
            $._uppercase_name,
            $.field,
          ),
        ),
        field("arguments", $.arguments),
      ),
    lambda: ($) =>
      prec(
        PREC.lambda,
        seq(
          field(
            "parameters",
            choice(
              $._typeless_parameters,
              alias(
                $.lowercase_name,
                $.polymorphic_identifier,
              ),
            ),
          ),
          "->",
          field("body", $.expressions),
        ),
      ),
    type_ascription: ($) =>
      seq("(", $._type_ascription, ")"),
    _type_ascription: ($) =>
      prec(
        PREC.type_ascription,
        seq($._expression, ":", $._type),
      ),

    /////////// OPERATORS /////////////
    unary: ($) =>
      prec(
        PREC.unary,
        choice(
          seq("-", $._expression),
          seq("+", $._expression),
          seq("not", $._expression),
          seq("~~~", $._expression),
        ),
      ),
    binary: ($) =>
      choice(
        prec.left(
          PREC.user_defined_op,
          seq(
            $._expression,
            alias(
              $.operator_name,
              $.user_operator,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.composition,
          seq(
            $._expression,
            alias(
              "<+>",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.infix_function,
          seq(
            $._expression,
            $.infix_function,
            $._expression,
          ),
        ),
        prec.left(
          PREC.or,
          seq(
            $._expression,
            alias(
              "or",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.and,
          seq(
            $._expression,
            alias(
              "and",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.bitwise_or,
          seq(
            $._expression,
            alias(
              "|||",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.bitwise_xor,
          seq(
            $._expression,
            alias(
              "^^^",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.bitwise_and,
          seq(
            $._expression,
            alias(
              "&&&",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.equality,
          seq(
            $._expression,
            alias(
              choice("==", "!=", "<=>"),
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.comparison,
          seq(
            $._expression,
            alias(
              choice("<=", ">=", "<", ">"),
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.bitwise_shift,
          seq(
            $._expression,
            alias(
              choice(">>>", "<<<"),
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.multiply,
          seq(
            $._expression,
            alias(
              choice(
                "**",
                "*",
                "/",
                "mod",
                "rem",
              ),
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.add,
          seq(
            $._expression,
            alias(
              choice("+", "-"),
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.cons,
          seq(
            $._expression,
            alias(
              "::",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
        prec.left(
          PREC.append,
          seq(
            $._expression,
            alias(
              ":::",
              $.operator_identifier,
            ),
            $._expression,
          ),
        ),
      ),
    group: ($) =>
      prec(
        PREC.group,
        seq("(", $._expression, ")"),
      ),
    _type: ($) =>
      choice(
        $.type_primitive,
        $.type_tuple,
        $.type_function,
        $.type_record,
        $._type_identifier,
        $.type_field,
        $.type_constraint,
      ),
    type_primitive: ($) =>
      seq(
        $._type_primitive,
        optional($.type_arguments),
      ),
    _type_primitive: ($) =>
      choice(
        "Unit",
        "Bool",
        "Char",
        "Float32",
        "Float64",
        "Int8",
        "Int16",
        "Int32",
        "Int64",
        "String",
        "BigInt",
        "BigDecimal",
        "Region",
        "Void",
      ),
    _type_identifier: ($) =>
      choice(
        alias(
          $.lowercase_name,
          $.polymorphic_identifier,
        ),
        $.type,
      ),
    type: ($) =>
      seq(
        $._uppercase_name,
        optional($.type_arguments),
      ),
    type_arguments: ($) =>
      seq("[", one_or_more($._type), "]"),
    type_tuple: ($) =>
      seq("(", one_or_more($._type), ")"),
    type_function: ($) =>
      prec.left(
        PREC.type_function,
        seq(
          field("parameters", $._type),
          "->",
          field("return_type", $._type),
          optional(
            seq(
              "\\",
              field("effects", $.effects),
            ),
          ),
        ),
      ),
    type_constraint: ($) =>
      seq(
        "#{",
        field(
          "tables",
          alias(
            $._type_tables,
            $.table_list,
          ),
        ),
        optional(
          seq(
            "|",
            field(
              "variable",
              $._type_identifier,
            ),
          ),
        ),
        "}",
      ),
    _type_tables: ($) =>
      one_or_more(
        alias($._type_table, $.table),
      ),
    nil: ($) => /Nil/,
    none: ($) => /None/,
    unit: ($) => prec(100, seq("(", ")")),
    integer: ($) =>
      /\d+(i8|i16|i32|i64|ii)?/,
    boolean: ($) => choice("true", "false"),
    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $._string_fragment,
            $._escape_sequence,
            $._interpolation,
          ),
        ),
        '"',
      ),
    fact: ($) => seq($._fact_inner, "."),
