test/corpus/expressions.txt
=====
fields
=====

def main(): Int32 = Math.x

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (field
        (identifier)
        (identifier)))))

=====
statements
=====

def main(): Int32 = 1 + 2; 1

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (binary
        (integer)
        (operator_identifier)
        (integer))
      (integer))))

=====
let
=====
def main(): Int32 = let a = 1
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (let
        (identifier)
        (integer)))))

=====
let with type
=====
def main(): Int32 = let a: Int32 = 1
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (let
        (identifier)
        (type_primitive)
        (integer)))))

=====
let match
=====
def main(): Int32 = let (x, y) = (1, 2)
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (let
        (tuple
          (identifier)
          (identifier))
        (tuple
          (integer)
          (integer))))))

=====
region
=====
def main() = 
  region rc {
    let a = 1;
    1
  }
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (expressions
      (region
        (identifier)
        (block
          (let
            (identifier)
            (integer))
          (integer))))))

=====
ref
=====
def main() = 
  ref 0 @ rc
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (expressions
      (ref
        (integer)
        (identifier)))))

=====
deref
=====
def main() = deref a
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (expressions
      (deref
        (identifier)))))

=====
assign
=====
def main() = a := 1
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (expressions
      (assign
        (identifier)
        (integer)))))

=====
if
=====
def main() = if (true) 1 else 2
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (expressions
      (if
        (boolean)
        (integer)
        (integer)))))

=====
foreach
=====
def main() = foreach(item <- items) item
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (expressions
      (foreach
        (control_expressions
          (gets
            (identifier)
            (identifier)))
        (identifier)))))

=====
foreach with block
=====
def main() = foreach(item <- items) {item}
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (expressions
      (foreach
        (control_expressions
          (gets
            (identifier)
            (identifier)))
        (block
          (identifier))))))

=====
foreach multiple
=====
def main() = foreach(item <- items; other <- others) item
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (expressions
      (foreach
        (control_expressions
          (gets
            (identifier)
            (identifier))
          (gets
            (identifier)
            (identifier)))
        (identifier)))))

=====
foreach multiple with filter
=====
def main() = foreach(item <- items; if item > 10; other <- others) item
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (expressions
      (foreach
        (control_expressions
          (gets
            (identifier)
            (identifier))
          (filter
            (binary
              (identifier)
              (operator_identifier)
              (integer)))
          (gets
            (identifier)
            (identifier)))
        (identifier)))))

=====
foreach yield
=====
def main() = foreach(item <- items; if item > 10; other <- others) yield (item, other)
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (expressions
      (foreach
        (control_expressions
          (gets
            (identifier)
            (identifier))
          (filter
            (binary
              (identifier)
              (operator_identifier)
              (integer)))
          (gets
            (identifier)
            (identifier)))
        (tuple
          (identifier)
          (identifier))))))

=====
for monadic
=====
def main() = forM(item <- items; if item > 10; other <- others) yield (item, other)
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (expressions
      (for_monadic
        (control_expressions
          (gets
            (identifier)
            (identifier))
          (filter
            (binary
              (identifier)
              (operator_identifier)
              (integer)))
          (gets
            (identifier)
            (identifier)))
        (tuple
          (identifier)
          (identifier))))))

=====
for monadic with variable mapping
=====

def main() =
  forM(
    item <- items;
    processed_item = foo(item);
    if processed_item > 10;
    other <- others
  ) yield (processed_item, other)

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (expressions
      (for_monadic
        control_expressions: (control_expressions
          (gets
            (identifier)
            (identifier))
          (variable_mapping
            (identifier)
            (call_expression
              function: (identifier)
              arguments: (arguments
                (identifier))))
          (filter
            (binary
              (identifier)
              (operator_identifier)
              (integer)))
          (gets
            (identifier)
            (identifier)))
        yields: (tuple
          (identifier)
          (identifier))))))

=====
for applicative
=====
def main() = forA(item <- items; if item > 10; other <- others) yield (item, other)
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (expressions
      (for_applicative
        (control_expressions
          (gets
            (identifier)
            (identifier))
          (filter
            (binary
              (identifier)
              (operator_identifier)
              (integer)))
          (gets
            (identifier)
            (identifier)))
        (tuple
          (identifier)
          (identifier))))))

=====
for applicative variable mapping
=====

def main() =
  forA(
    item <- items;
    processed_item = foo(item);
    if processed_item > 10;
    other <- others
  ) yield (processed_item, other)

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (expressions
      (for_applicative
        control_expressions: (control_expressions
          (gets
            (identifier)
            (identifier))
          (variable_mapping
            (identifier)
            (call_expression
              function: (identifier)
              arguments: (arguments
                (identifier))))
          (filter
            (binary
              (identifier)
              (operator_identifier)
              (integer)))
          (gets
            (identifier)
            (identifier)))
        yields: (tuple
          (identifier)
          (identifier))))))

=====
block
=====
def main(): Int32 = let a = { 1 }
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (let
        (identifier)
        (block
          (integer))))))

=====
match
=====
def main(): Int32 = match a {
  case 1 => true
  case _ => false
}
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (match
        (identifier)
        (case
          (integer)
          (expressions
            (boolean)))
        (case
          (ignored)
          (expressions
            (boolean)))))))

=====
multiple statement case
=====

def gameLoop(secret: Int32): Unit \ IO = {
    println("Enter a guess:");
    match readAndParseGuess() {
        case Result.Ok(g) => 
            if (secret == g) {
                println("Correct!")
            } else {
                println("Incorrect!");
                gameLoop(secret)
            }
        case Result.Err(_) => 
            println("Not a number? Goodbye.");
            println("The secret was: ${secret}")
    }
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (type_primitive)))
    return_type: (type_primitive)
    effects: (effects
      (identifier))
    body: (expressions
      (block
        (call_expression
          function: (identifier)
          arguments: (arguments
            (string)))
        (match
          (call_expression
            function: (identifier)
            arguments: (arguments))
          (case
            pattern: (constructor
              (field
                (identifier)
                (identifier))
              (identifier))
            expressions: (expressions
              (if
                (binary
                  (identifier)
                  (operator_identifier)
                  (identifier))
                (block
                  (call_expression
                    function: (identifier)
                    arguments: (arguments
                      (string))))
                (block
                  (call_expression
                    function: (identifier)
                    arguments: (arguments
                      (string)))
                  (call_expression
                    function: (identifier)
                    arguments: (arguments
                      (identifier)))))))
          (case
            pattern: (constructor
              (field
                (identifier)
                (identifier))
              (ignored))
            expressions: (expressions
              (call_expression
                function: (identifier)
                arguments: (arguments
                  (string)))
              (call_expression
                function: (identifier)
                arguments: (arguments
                  (string
                    (interpolation
                      (identifier))))))))))))

=====
match enum
=====
def main(): Int32 = match a {
  case Shape.Circle(r) => true
  case Shape.Square(w) => false
  case Shape.Rectangle(h, w) => false
}
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (match
        (identifier)
        (case
          (constructor
            (field
              (identifier)
              (identifier))
            (identifier))
          (expressions
            (boolean)))
        (case
          (constructor
            (field
              (identifier)
              (identifier))
            (identifier))
          (expressions
            (boolean)))
        (case
          (constructor
            (field
              (identifier)
              (identifier))
            (identifier)
            (identifier))
          (expressions
            (boolean)))))))

=====
match cons
=====
def main(): Int32 = match a {
  case Nil => true
  case x :: xs => false
}
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (match
        (identifier)
        (case
          (nil)
          (expressions
            (boolean)))
        (case
          (identifier)
          (identifier)
          (expressions
            (boolean)))))))

=====
match wildcard, tuple and name
=====
def main(): Int32 = match a {
  case x => true
  case (x, y) => false
  case _ => true
}
---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (match
        (identifier)
        (case
          (identifier)
          (expressions
            (boolean)))
        (case
          (tuple
            (identifier)
            (identifier))
          (expressions
            (boolean)))
        (case
          (ignored)
          (expressions
            (boolean)))))))

=====
match lambda
=====

def main(): Listi[Int32] = List.map(match (x, y) -> x + y, (1, 1) :: (2, 2) :: Nil)

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type
      (identifier)
      (type_arguments
        (type_primitive)))
    (expressions
      (call_expression
        (field
          (identifier)
          (identifier))
        (arguments
          (match
            (tuple
              (identifier)
              (identifier))
            (binary
              (identifier)
              (operator_identifier)
              (identifier)))
          (binary
            (binary
              (tuple
                (integer)
                (integer))
              (operator_identifier)
              (tuple
                (integer)
                (integer)))
            (operator_identifier)
            (nil)))))))

=====
operator call expression
=====

def main(): String = (foo >> bar)(1)

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (expressions
      (call_expression
        (group
          (binary
            (identifier)
            (user_operator)
            (identifier)))
        (arguments
          (integer))))))

=====
return type none
=====

def handleExc(f: a -> b \ ef): a -> Option[b] \ ef - Exc = 
    x -> run {
        Some(f(x))
    } with handler Exc {
        def raise(_, _) = None
    }

---

(program
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_function
          (polymorphic_identifier)
          (polymorphic_identifier)
          (effects
            (polymorphic_identifier)))))
    (type_function
      (polymorphic_identifier)
      (type
        (identifier)
        (type_arguments
          (polymorphic_identifier))))
    (effects
      (binary_effect
        (polymorphic_identifier)
        (operator)
        (identifier)))
    (expressions
      (lambda
        (identifier)
        (expressions
          (effect_block
            (block
              (call_expression
                (identifier)
                (arguments
                  (call_expression
                    (identifier)
                    (arguments
                      (identifier))))))
            (effect_handler
              (identifier)
              (handler_body
                (function_declaration
                  (identifier)
                  (parameters
                    (ignored)
                    (ignored))
                  (expressions
                    (none)))))))))))

=====
chained call expression
=====

def main(): Unit \ IO = {
    handleAmb(handleExc(drunkFlip))() |> println;

    handleExc(handleAmb(drunkFlip))() |> println
}

---

(program
  (function_declaration
    (identifier)
    (parameters)
    (type_primitive)
    (effects
      (identifier))
    (expressions
      (block
        (binary
          (call_expression
            (call_expression
              (identifier)
              (arguments
                (call_expression
                  (identifier)
                  (arguments
                    (identifier)))))
            (arguments))
          (user_operator)
          (identifier))
        (binary
          (call_expression
            (call_expression
              (identifier)
              (arguments
                (call_expression
                  (identifier)
                  (arguments
                    (identifier)))))
            (arguments))
          (user_operator)
          (identifier))))))

=====
java object creation
=====


def getSecretNumber(): Int32 \ {NonDet, IO} = 
    let rnd = new JRandom();
    rnd.nextInt()

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (type_primitive)
    effects: (effects
      (effect_group
        (identifier)
        (identifier)))
    body: (expressions
      (let
        (identifier)
        (object_constructor
          type: (identifier)
          arguments: (arguments)))
      (call_expression
        function: (field
          (identifier)
          (identifier))
        arguments: (arguments)))))

=====
spawn process
=====

def main(): Unit \ IO = region rc {
    spawn println("Hello from thread") @ rc
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (type_primitive)
    effects: (effects
      (identifier))
    body: (expressions
      (region
        name: (identifier)
        body: (block
          (spawn
            (call_expression
              function: (identifier)
              arguments: (arguments
                (string)))
            (identifier)))))))

=====
select
=====

def main(): Unit \ {Chan, NonDet, IO} = region rc {
    let (tx1, rx1) = Channel.buffered(1);
    let (tx2, rx2) = Channel.buffered(1);
    spawn meow(tx1) @ rc;
    spawn woof(tx2) @ rc;
    select {
        case m <- recv(rx1) => m
        case m <- recv(rx2) => m
    } |> println
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (type_primitive)
    effects: (effects
      (effect_group
        (identifier)
        (identifier)
        (identifier)))
    body: (expressions
      (region
        name: (identifier)
        body: (block
          (let
            (tuple
              (identifier)
              (identifier))
            (call_expression
              function: (field
                (identifier)
                (identifier))
              arguments: (arguments
                (integer))))
          (let
            (tuple
              (identifier)
              (identifier))
            (call_expression
              function: (field
                (identifier)
                (identifier))
              arguments: (arguments
                (integer))))
          (spawn
            (call_expression
              function: (identifier)
              arguments: (arguments
                (identifier)))
            (identifier))
          (spawn
            (call_expression
              function: (identifier)
              arguments: (arguments
                (identifier)))
            (identifier))
          (binary
            (select
              (case
                pattern: (gets
                  (identifier)
                  (call_expression
                    function: (identifier)
                    arguments: (arguments
                      (identifier))))
                expressions: (expressions
                  (identifier)))
              (case
                pattern: (gets
                  (identifier)
                  (call_expression
                    function: (identifier)
                    arguments: (arguments
                      (identifier))))
                expressions: (expressions
                  (identifier))))
            (user_operator)
            (identifier)))))))

=====
select default
=====

def main(): String \ {Chan, NonDet} = region rc {
    let (_, rx1) = Channel.buffered(1);
    let (_, rx2) = Channel.buffered(1);
    select {
        case _ <- recv(rx1) => "one"
        case _ <- recv(rx2) => "two"
        case _             => "default"
    }
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (type_primitive)
    effects: (effects
      (effect_group
        (identifier)
        (identifier)))
    body: (expressions
      (region
        name: (identifier)
        body: (block
          (let
            (tuple
              (ignored)
              (identifier))
            (call_expression
              function: (field
                (identifier)
                (identifier))
              arguments: (arguments
                (integer))))
          (let
            (tuple
              (ignored)
              (identifier))
            (call_expression
              function: (field
                (identifier)
                (identifier))
              arguments: (arguments
                (integer))))
          (select
            (case
              pattern: (gets
                (ignored)
                (call_expression
                  function: (identifier)
                  arguments: (arguments
                    (identifier))))
              expressions: (expressions
                (string)))
            (case
              pattern: (gets
                (ignored)
                (call_expression
                  function: (identifier)
                  arguments: (arguments
                    (identifier))))
              expressions: (expressions
                (string)))
            (case
              pattern: (default)
              expressions: (expressions
                (string)))))))))

=====
parallel
=====

def parMap(f: a -> b, l: List[a]): List[b] = match l {
    case Nil     => Nil
    case x :: xs =>
        par (r <- f(x); rs <- parMap(f, xs))
            yield r :: rs
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (type_function
          parameters: (polymorphic_identifier)
          return_type: (polymorphic_identifier)))
      (parameter
        name: (identifier)
        type: (type
          (identifier)
          (type_arguments
            (polymorphic_identifier)))))
    return_type: (type
      (identifier)
      (type_arguments
        (polymorphic_identifier)))
    body: (expressions
      (match
        (identifier)
        (case
          pattern: (nil)
          expressions: (expressions
            (nil)))
        (case
          pattern: (identifier)
          pattern: (identifier)
          expressions: (expressions
            (parallel
              (gets
                (identifier)
                (call_expression
                  function: (identifier)
                  arguments: (arguments
                    (identifier))))
              (gets
                (identifier)
                (call_expression
                  function: (identifier)
                  arguments: (arguments
                    (identifier)
                    (identifier))))
              (binary
                (identifier)
                (operator_identifier)
                (identifier)))))))))

=====
constraint
=====

def main(): Unit =
  let rules = #{
    Path(x, y) :- Edge(x, y).
    Path(x, z) :- Path(x, y), Edge(y, z).
  }

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (type_primitive)
    body: (expressions
      (let
        (identifier)
        (constraints
          (rule
            head: (fact
              table: (identifier)
              terms: (terms
                (identifier)
                (identifier)))
            body: (rule_body
              (fact
                table: (identifier)
                terms: (terms
                  (identifier)
                  (identifier)))))
          (rule
            head: (fact
              table: (identifier)
              terms: (terms
                (identifier)
                (identifier)))
            body: (rule_body
              (fact
                table: (identifier)
                terms: (terms
                  (identifier)
                  (identifier)))
              (fact
                table: (identifier)
                terms: (terms
                  (identifier)
                  (identifier))))))))))

=====
inject
=====

def main(): Unit =
  let s = Set#{(1, 2), (2, 3), (3, 4), (4, 5)};
  let edges = inject s into Edge/2

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (type_primitive)
    body: (expressions
      (let
        (identifier)
        (set
          (tuple
            (integer)
            (integer))
          (tuple
            (integer)
            (integer))
          (tuple
            (integer)
            (integer))
          (tuple
            (integer)
            (integer))))
      (let
        (identifier)
        (inject
          data: (data_list
            (identifier))
          tables: (table_list
            (table
              (identifier)
              (arity))))))))

=====
query
=====

def isConnected(s: Set[(Int32, Int32)], src: Int32, dst: Int32): Bool =
    let rules = #{
        Path(x, y) :- Edge(x, y).
        Path(x, z) :- Path(x, y), Edge(y, z).
    };
    let edges = inject s into Edge/2;
    let paths = query edges, rules select true from Path(src, dst);
    not (paths |> Vector.isEmpty)

---

(program
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (type
          (identifier)
          (type_arguments
            (type_tuple
              (type_primitive)
              (type_primitive)))))
      (parameter
        name: (identifier)
        type: (type_primitive))
      (parameter
        name: (identifier)
        type: (type_primitive)))
    return_type: (type_primitive)
    body: (expressions
      (let
        (identifier)
        (constraints
          (rule
            head: (fact
              table: (identifier)
              terms: (terms
                (identifier)
                (identifier)))
            body: (rule_body
              (fact
                table: (identifier)
                terms: (terms
                  (identifier)
                  (identifier)))))
          (rule
            head: (fact
              table: (identifier)
              terms: (terms
                (identifier)
                (identifier)))
            body: (rule_body
              (fact
                table: (identifier)
                terms: (terms
                  (identifier)
                  (identifier)))
              (fact
                table: (identifier)
                terms: (terms
                  (identifier)
                  (identifier)))))))
      (let
        (identifier)
        (inject
          data: (data_list
            (identifier))
          tables: (table_list
            (table
              (identifier)
              (arity)))))
      (let
        (identifier)
        (query
          source: (source_list
            (identifier)
            (identifier))
          select: (boolean)
          facts: (facts
            (fact
              table: (identifier)
              terms: (terms
                (identifier)
                (identifier))))))
      (unary
        (group
          (binary
            (identifier)
            (user_operator)
            (field
              (identifier)
              (identifier))))))))

=====
solve
=====

def main(): Unit =
    let f1 = #{
        ColorEdge(1, "blue", 2).
        ColorEdge(2, "blue", 3).
        ColorEdge(3, "red", 4).
    };
    let r1 = #{
        ColorPath(x, c, y) :- ColorEdge(x, c, y).
        ColorPath(x, c, z) :- ColorPath(x, c, y), ColorEdge(y, c, z).
    };
    let m = solve f1, r1 project ColorPath;
    ()

---
